--- a/resource-hub.html
+++ b/resource-hub.html
@@ -264,12 +264,21 @@ const DET_GROUPS = [
   if (!root) return;
   root.innerHTML = DET_GROUPS.map((g, index) => `
     <div class="det-item" data-key="${g.key}">
-      <button class="det-trigger" aria-expanded="${index === 0 ? 'true' : 'false'}" aria-controls="panel-${g.key}" id="trigger-${g.key}">
+      <button class="det-trigger"
+              aria-expanded="${index === 0 ? 'true' : 'false'}"
+              aria-controls="panel-${g.key}"
+              id="trigger-${g.key}">
         <span class="det-trigger-title">${g.title}</span>
         ${g.intro ? `<span class="det-trigger-intro">${g.intro}</span>` : ""}
         <span class="det-trigger-icon" aria-hidden="true">${index === 0 ? '−' : '+'}</span>
       </button>
+      <div class="det-panel"
+          id="panel-${g.key}"
+          role="region"
+          aria-labelledby="trigger-${g.key}"
+          ${index === 0 ? '' : 'hidden'}>
         ${g.subsections ? `
+          <!-- Inner accordion lives INSIDE the outer panel -->
           <div class="det-accordion" id="detAccordionInner-${g.key}">
             ${g.subsections.map((s, si) => `
               <div class="det-item" data-subkey="${s.key}">
