--- a/resource-hub.html
+++ b/resource-hub.html
@@ -246,12 +246,16 @@ const DET_GROUPS = [
         key: "foundations-of-data-storage",
         title: "Foundations of Data Storage",
         description: [
-          "<ol><li>Object Stores: S3, GCS, Azure Blob, MinIO</li><li>Block vs. File vs. Object Storage: When and why they matter</li></ol>",
+          "<ul><li>Object Stores: S3, GCS, Azure Blob, MinIO</li><li>Block vs. File vs. Object Storage: When and why they matter</li></ul>",
           "Object storage sits at the heart of modern data platforms, but its design and tradeoffs aren't always intuitive when you're first getting started.",
           "We selected these three resources to give DET members a well-rounded and practical understanding of object storage, from real-world use cases to architectural principles and design tradeoffs across storage paradigms."
         ],
         items: [
-          { title: "An official walkthrough of Amazon S3 concepts", url: "https://docs.aws.amazon.com/AmazonS3/latest/userguide/Welcome.html", tag: "Blog" },
+          { title: "An official walkthrough of Amazon S3 concepts", 
+            description: [
+              "Why this?"
+            ],
+          url: "https://docs.aws.amazon.com/AmazonS3/latest/userguide/Welcome.html", tag: "Blog" },
           { title: "An official walkthrough of Amazon S3 concepts", url: "https://docs.aws.amazon.com/AmazonS3/latest/userguide/Welcome.html", tag: "Blog" }
         ]
       },
