--- a/resource-hub.html
+++ b/resource-hub.html
@@ -254,7 +254,10 @@ const DET_GROUPS = [
         items: [
           { title: "An official walkthrough of Amazon S3 concepts", 
             description: [
-              "Why this?"
+              "<strong>Why this?</strong>",
+              "S3 is the dominant object store in cloud data architectures. This official AWS resource is a concise, vendor-backed primer on how object storage works in practice. While it focuses on S3, many of the concepts are broadly applicable across other platforms.",
+              "<strong>Topics Covered:</strong>",
+              "<ul>Buckets and objects<li>Eventual consistency</li>API-driven access<li>Storage classes and durability guarantees</li></ul>"
             ],
           url: "https://docs.aws.amazon.com/AmazonS3/latest/userguide/Welcome.html", tag: "Blog" },
           { title: "An official walkthrough of Amazon S3 concepts", url: "https://docs.aws.amazon.com/AmazonS3/latest/userguide/Welcome.html", tag: "Blog" }
