--- a/resource-hub.html
+++ b/resource-hub.html
@@ -285,43 +285,44 @@ const DET_GROUPS = [
           role="region"
           aria-labelledby="trigger-${g.key}"
           ${index === 0 ? '' : 'hidden'}>
-        ${g.subsections ? `
-          <!-- Inner accordion lives INSIDE the outer panel -->
-          <div class="det-accordion" id="detAccordionInner-${g.key}">
-            ${g.subsections.map((s, si) => `
-              <div class="det-item" data-subkey="${s.key}">
-                <button class="det-trigger"
-                        aria-expanded="${si === 0 ? 'true' : 'false'}"
-                        aria-controls="panel-${g.key}-${s.key}"
-                        id="trigger-${g.key}-${s.key}">
-                  <span class="det-trigger-title">${s.title}</span>
-                  ${s.description ? `<span class="det-trigger-intro">${typeof s.description === 'string' ? s.description : ''}</span>` : ""}
-                  <span class="det-trigger-icon" aria-hidden="true">${si === 0 ? '−' : '+'}</span>
-                </button>
-                <div class="det-panel"
-                    id="panel-${g.key}-${s.key}"
-                    role="region"
-                    aria-labelledby="trigger-${g.key}-${s.key}"
-                    ${si === 0 ? '' : 'hidden'}>
-                  ${Array.isArray(s.description) ? `<div class="det-panel-description">${formatDescription(s.description)}</div>` : ""}
-                  ${(s.items || []).map(it => `
-                    <div class="det-item-box">
-                      <div class="det-item-top">
-                        <a class="det-link" href="${it.url}" target="_blank" rel="noopener">
-                          <span class="det-link-title">${it.title}</span>
-                        </a>
-                        ${it.tag ? `<span class="det-tag">${it.tag}</span>` : ""}
+          ${g.subsections ? `
+            <div class="det-accordion" id="detAccordionInner-${g.key}">
+              ${g.subsections.map((s, si) => `
+                <div class="det-item" data-subkey="${s.key}">
+                  <button class="det-trigger"
+                          aria-expanded="${si === 0 ? 'true' : 'false'}"
+                          aria-controls="panel-${g.key}-${s.key}"
+                          id="trigger-${g.key}-${s.key}">
+                    <span class="det-trigger-title">${s.title}</span>
+                    ${s.description ? `<span class="det-trigger-intro">${typeof s.description === 'string' ? s.description : ''}</span>` : ""}
+                    <span class="det-trigger-icon" aria-hidden="true">${si === 0 ? '−' : '+'}</span>
+                  </button>
+                  <div class="det-panel"
+                      id="panel-${g.key}-${s.key}"
+                      role="region"
+                      aria-labelledby="trigger-${g.key}-${s.key}"
+                      ${si === 0 ? '' : 'hidden'}>
+
+                    ${(s.items || []).map(it => `
+                      <div class="det-item-box">
+                        <div class="det-item-top">
+                          <a class="det-link" href="${it.url}" target="_blank" rel="noopener">
+                            <span class="det-link-title">${it.title}</span>
+                          </a>
+                          ${it.tag ? `<span class="det-tag">${it.tag}</span>` : ""}
+                        </div>
+                        ${it.description ? `
+                          <div class="det-link-desc" role="note">
+                            ${Array.isArray(it.description) ? formatDescription(it.description) : it.description}
+                          </div>
+                        ` : ""}
                       </div>
-                      ${it.description ? `
-                        <div class="det-link-desc" role="note">
-                          ${Array.isArray(it.description) ? formatDescription(it.description) : it.description}
-                        </div>` : ""}
-                    </div>
-                  `).join("")}
+                    `).join("")}
+                  </div>
+                  <!-- DO NOT put item/description markup after this closing panel div -->
                 </div>
-              </div>
-            `).join("")}
-          </div>
+              `).join("")}
+            </div>
         ` : `
           ${(g.items || []).map(it => `
             <a class="det-link" href="${it.url}" target="_blank" rel="noopener">
