--- a/resource-hub.html
+++ b/resource-hub.html
@@ -55,11 +55,37 @@ body{margin:0;background:#fff;color:var(--det-text);font-family:ui-sans-serif,sy
 .det-panel[hidden]{display:none!important}
 .det-panel{padding:10px 16px 16px;display:grid;gap:10px}
 .det-panel-description{font-size:14px;color:#6b7280;margin-bottom:6px;line-height:1.5}
-.det-link{display:flex;align-items:center;justify-content:space-between;padding:12px 14px;border:1px solid var(--det-border);border-radius:12px;text-decoration:none;color:inherit;transition:box-shadow .18s ease,transform .18s ease,border-color .18s ease;background:#fff}
 .det-link:hover{box-shadow:0 8px 20px rgba(2,6,23,.06);border-color:#d1d5db;transform:translateY(-1px)}
 .det-link-title{font-weight:500}
 .det-link-desc{ font-size:12px; color:#6b7280; margin-top:4px; line-height:1.45 }
 .det-tag{font-size:12px;padding:4px 8px;border-radius:999px;background:rgba(112, 225, 25, 0.12);color:#16a34a;border:1px solid rgba(6,182,212,.25);white-space:nowrap}
+.det-item-box{
+  border:1px solid var(--det-border);
+  border-radius:12px;
+  background:#fff;
+  padding:12px 14px;
+  display:grid;
+  gap:6px;
+}
+/* Top row: title link + tag on the right */
+.det-item-top{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:12px;
+}
+
+/* Make the anchor just a text link (remove the old box styles) */
+.det-link{
+  display:inline;
+  padding:0;
+  border:0;
+  border-radius:0;
+  background:transparent;
+  text-decoration:none;
+  color:inherit;
+}
+.det-item-box:hover .det-link-title{ text-decoration:underline; }
 .det-footnote{text-align:center;color:#9ca3af;font-size:12px;margin-top:24px}
 
 /* Global results */
@@ -422,20 +448,20 @@ const DET_GROUPS = [
                         `).join("")}
                       </div>
                     ` : `
-                      ${(s.items || []).map(it => `
-                        <div class="det-item-box">
-                          <div class="det-item-top">
-                            <a class="det-link" href="${it.url}" target="_blank" rel="noopener">
-                              <span class="det-link-title">${it.title}</span>
-                              ${it.tag ? `<span class="det-tag">${it.tag}</span>` : ""}
-                            </a>
-                          </div>
-                          ${it.description ? `
-                            <div class="det-link-desc" role="note">
-                              ${Array.isArray(it.description) ? formatDescription(it.description) : it.description}
-                            </div>` : ""}
+                    ${(s.items || []).map(it => `
+                      <div class="det-item-box">
+                        <div class="det-item-top">
+                          <a class="det-link" href="${it.url}" target="_blank" rel="noopener">
+                            <span class="det-link-title">${it.title}</span>
+                          </a>
+                          ${it.tag ? `<span class="det-tag">${it.tag}</span>` : ""}
                         </div>
-                      `).join("")}
+                        ${it.description ? `
+                          <div class="det-link-desc" role="note">
+                            ${Array.isArray(it.description) ? formatDescription(it.description) : it.description}
+                          </div>` : ""}
+                      </div>
+                    `).join("")}
                     `}
                   </div>
                 </div>
