remove ugly hover

--- a/resource-hub.html
+++ b/resource-hub.html
@@ -85,7 +85,7 @@ body{margin:0;background:#fff;color:var(--det-text);font-family:ui-sans-serif,sy
   text-decoration:none;
   color:inherit;
 }
-.det-item-box:hover .det-link-title{ text-decoration:underline; }
+.det-link-title{ text-decoration:underline; }
 .det-footnote{text-align:center;color:#9ca3af;font-size:12px;margin-top:24px}
 
 /* Global results */
