--- a/resource-hub.html
+++ b/resource-hub.html
@@ -55,7 +55,6 @@ body{margin:0;background:#fff;color:var(--det-text);font-family:ui-sans-serif,sy
 .det-panel[hidden]{display:none!important}
 .det-panel{padding:10px 16px 16px;display:grid;gap:10px}
 .det-panel-description{font-size:14px;color:#6b7280;margin-bottom:6px;line-height:1.5}
-.det-link:hover{box-shadow:0 8px 20px rgba(2,6,23,.06);border-color:#d1d5db;transform:translateY(-1px)}
 .det-link-title{font-weight:500}
 .det-link-desc{ font-size:12px; color:#6b7280; margin-top:4px; line-height:1.45 }
 .det-tag{font-size:12px;padding:4px 8px;border-radius:999px;background:rgba(112, 225, 25, 0.12);color:#16a34a;border:1px solid rgba(6,182,212,.25);white-space:nowrap}
@@ -85,7 +84,7 @@ body{margin:0;background:#fff;color:var(--det-text);font-family:ui-sans-serif,sy
   text-decoration:none;
   color:inherit;
 }
-.det-link-title{ text-decoration:underline; }
+.det-item-box:hover .det-link-title{ text-decoration:underline; }
 .det-footnote{text-align:center;color:#9ca3af;font-size:12px;margin-top:24px}
 
 /* Global results */
