fix weird accordion bounce

--- a/resource-hub.html
+++ b/resource-hub.html
@@ -46,6 +46,7 @@ body{margin:0;background:#fff;color:var(--det-text);font-family:ui-sans-serif,sy
 .det-hint{margin-top:6px;text-align:center;font-size:12px;color:#6b7280}
 
 .det-accordion{display:grid;gap:14px}
+.det-accordion, .det-item, .det-panel { overflow-anchor: none; }
 .det-item{border:1px solid var(--det-border);border-radius:var(--radius);background:rgba(255,255,255,.9);backdrop-filter:saturate(1.1) blur(2px)}
 .det-trigger{width:100%;text-align:left;background:transparent;border:0;padding:16px 18px;display:flex;align-items:flex-start;justify-content:space-between;gap:8px;cursor:pointer}
 .det-trigger-title{font-weight:600;font-size:16px;color:var(--det-text)}
